fix button text overflow on small screen size

--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@
 
 button {
   width: 80%;
+  min-width: fit-content;
   border-radius: 20px;
   background-color: #9ca3af;
   font-size: 1.2rem;
